--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "hapi": "~1.20.0",
-    "openerp": "~0.1.0",
-    "openobject": "~0.1.0",
-    "xmlrpc": "~1.1.1"
+    "xmlrpc": "~1.1.1",
+    "lout": "~0.5.0",
+    "handlebars": "~1.1.2"
   }
 }
