--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hapi": "~1.20.0",
     "xmlrpc": "~1.1.1",
     "lout": "~0.5.0",
-    "handlebars": "~1.1.2"
+    "handlebars": "~1.1.2",
+    "ini": "~1.1.0"
   }
 }
