--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
   },
   "author": "Brian Dunnette <brian@dunnette.us>",
   "license": "MIT",
-  "repository" :
-  { "type" : "git"
-    , "url" : "http://github.com/bdunnette/hapier.git"
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/bdunnette/hapier.git"
   },
-
   "dependencies": {
     "ini": "~1.1.0",
-    "handlebars": "~1.0.12",
-    "xmlrpc": "~1.1.1",
-    "hapi": "1.20.x",
-    "lout": "0.5.x"
+    "xmlrpc": "~1.2.0",
+    "hapi": "~2.1.2",
+    "handlebars": "~1.3.0",
+    "lout": "~2.0.0"
   }
 }
