--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "url": "http://github.com/bdunnette/hapier.git"
   },
   "dependencies": {
-    "ini": "~1.1.0",
-    "xmlrpc": "~1.2.0",
-    "hapi": "~2.1.2",
+    "hapi": "~2.3.0",
     "handlebars": "~1.3.0",
-    "lout": "~2.0.0"
+    "lout": "~2.0.1",
+    "xmlrpc": "~1.2.0",
+    "ini": "~1.1.0"
   }
 }
