--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "url": "http://github.com/bdunnette/hapier.git"
   },
   "dependencies": {
-    "hapi": "~2.3.0",
+    "hapi": "^2.6.0",
     "handlebars": "~1.3.0",
-    "lout": "~2.0.1",
+    "lout": "~2.1.0",
     "xmlrpc": "~1.2.0",
     "ini": "~1.1.0"
   }
