--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "hapi": "^2.6.0",
     "handlebars": "~1.3.0",
-    "lout": "~2.1.0",
     "xmlrpc": "~1.2.0",
-    "ini": "~1.1.0"
+    "ini": "~1.1.0",
+    "lout": "^2.1.0"
   }
 }
